--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # worker
-Zyad hany
+Zyad hany <zeyad.hany2003@gmail.com>
 Youssef Khaled
 
 # These individuals contributed to the hbnb project in this repository 
